# file_forge

./: .gitignore  pyproject.toml
config/: default_config.toml
docs/: COMPLIANCE_REPORT.md  DEPLOYMENT_GUIDE.md  SPECIFICATION_COMPLIANCE_CHECKLIST.md  TDD_PROCESSORS_STATUS.md  implementation_summary.md
scripts/: test_image_quick.py
specs/: FileForge_Technical_Specification.docx
src/fileforge/: __init__.py  __main__.py  cli.py  cli_export_rules.py  cli_wiring.py  config.py  watcher.py
src/fileforge/core/: __init__.py  metadata.py
src/fileforge/gui/: __init__.py  app.py  main_window.py  state.py
src/fileforge/gui/services/: __init__.py  config_service.py  database_service.py  file_service.py  processing_service.py  watcher_service.py
src/fileforge/gui/viewmodels/: __init__.py  dashboard.py  file_browser.py  processing.py  results.py  settings.py
src/fileforge/gui/views/: __init__.py  dashboard.py  file_browser.py  processing.py  results.py  settings.py
src/fileforge/gui/widgets/: __init__.py  sidebar.py
src/fileforge/models/: __init__.py  caption.py  colors.py  detector.py  embeddings.py  faces.py  hashing.py  llm.py  nsfw.py  ocr.py  prompts.py  quality.py  transforms.py
src/fileforge/pipeline/: __init__.py  core.py  discovery.py  orchestrator.py
src/fileforge/pipeline/processors/: __init__.py  document.py  image.py  text.py
src/fileforge/plugins/: __init__.py  hookspecs.py  manager.py
src/fileforge/plugins/builtins/: __init__.py  classifier.py  namer.py  outputs.py  processors.py
src/fileforge/storage/: __init__.py  actions.py  database.py  exceptions.py  history.py
src/fileforge/utils/: __init__.py  hashing.py  logging.py  tags.py  windows.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_files.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_actions.py  test_cli.py  test_config.py  test_database.py  test_discovery.py  test_image_processor.py  test_llm.py  test_orchestrator.py  test_plugins.py  test_processors.py
tests/unit/gui/: __init__.py  conftest.py  test_app_state.py  test_main_window.py  test_services.py  test_viewmodels.py
